--- a/category/서양판타지.md
+++ b/category/서양판타지.md
@@ -1,7 +1,11 @@
 ---
-
-layout: category
-
-title: 서양판타지
-
+title: "서양판타지"
+layout: archive
+permalink: categories/WFant
+author_profile: true
+sidebar_main: true
 ---
+
+
+{% assign posts = site.categories.WFant %}
+{% for post in posts %} {% include archive-single.html type=page.entries_layout %} {% endfor %}
